--- a/2task.css
+++ b/2task.css
@@ -6,6 +6,151 @@
 * {
   margin: 0;
   padding: 0;
-  list-style: none;
   font-family: "Roboto";
+  list-style: none;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  height: 400px;
+  background-image: url("./background_image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 75px;
+}
+
+header p {
+  color: #fff;
+  font-size: 15px;
+  width: 600px;
+  margin-top: -1.5rem;
+  text-align: center;
+}
+
+header button {
+  padding: 1rem 3rem;
+  border: 1px solid #fff;
+  background-color: transparent;
+  font-size: 15px;
+  text-transform: uppercase;
+  color: #fff;
+  cursor: pointer;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 4rem;
+  width: 800px;
+  margin: auto;
+  margin-bottom: 20px;
+}
+
+main div {
+  width: 100%;
+  height: 450px;
+}
+
+h2 {
+  font-size: 2rem;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+h4 {
+  text-transform: uppercase;
+  font-size: 13px;
+  color: #a8a6a6;
+}
+
+hr {
+  border: none;
+  height: 2px;
+  width: 80px;
+  background-color: #000000;
+}
+
+.slogan {
+  text-align: center;
+  width: 800px;
+  font-size: 3rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 10px;
+  color: #fff;
+}
+
+.experience_con {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: url("./photo-1550510537-64a36484eae2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.experience_con ul {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  background-color: #ffffff;
+  height: 150px;
+  width: 150px;
+}
+
+.experience_con li:nth-child(1) {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.experience_con li:nth-child(2) {
+  font-size: 0.75rem;
+  font-weight: 500;
+  color: #808080;
+  text-transform: uppercase;
+}
+
+.about_us_con {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1.5rem;
+}
+
+.about_us_con ul li,
+.about_us_con p {
+  line-height: 21px;
+  color: #a8a6a6;
+  font-size: 15px;
+}
+
+.about_us_con ul li::before {
+  font-family: "Font Awesome 6 Free";
+  content: "\f111";
+  font-weight: 900;
+  color: lightgreen;
+  font-size: 9px;
+  vertical-align: middle;
+  margin-right: 10px;
+}
+
+.about_us_con button {
+  width: 150px;
+  height: 50px;
+  border: 1px solid #000000;
+  background-color: transparent;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-weight: 500;
+  letter-spacing: 1px;
 }
